--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,20 +15,36 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        Properties localProperties = new Properties()
+        localProperties.load(project.rootProject.file('local.properties').newDataInputStream())
+        def mapkitApiKey = localProperties.getProperty("MAPKIT_API_KEY", "")
+
+        buildConfigField "String", "MAPKIT_API_KEY", "\"${mapkitApiKey}\""
+
+        buildTypes {
+            buildTypes {
+                debug {
+                    buildConfigField "String", "MAPKIT_API_KEY", "\"${mapkitApiKey}\""
+                }
+                release {
+                    buildConfigField "String", "MAPKIT_API_KEY", "\"${mapkitApiKey}\""
+                }
+            }
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+
+    buildFeatures {
+        viewBinding true
+        buildConfig = true
     }
 }
 
@@ -41,4 +57,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation 'com.yandex.android:maps.mobile:4.4.0-full'
+
+    implementation 'androidx.fragment:fragment-ktx:1.6.1'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
